--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        registry: faraaz/tarabut
+        registry: dockerhub
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         
@@ -21,4 +21,4 @@ jobs:
         context: .
         file: ./app/Dockerfile
         push: true
-        tags: test
+        tags: faraaz/tarabut:test
