--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8-slim-buster
 
 WORKDIR /app
 
-COPY requirements.txt ./
+COPY ./app/requirements.txt ./
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . .
