--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,6 +18,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./app/Dockerfile
+        file: Dockerfile
         push: true
         tags: faraaz/tarabut:test
