--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,4 +20,4 @@ jobs:
         context: .
         file: Dockerfile
         push: true
-        tags: faraaz/tarabut:test
+        tags: faraaz/tarabut:testing
