--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,12 +14,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: faraaz/tarabut
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
@@ -27,5 +21,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: faraaz/tarabut:v1.0.0
