--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,3 +22,8 @@ jobs:
           file: Dockerfile
           push: true
           tags: faraaz/tarabut:v1.0.0
+          
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
