--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,6 +27,13 @@ jobs:
 #         uses: rtCamp/action-slack-notify@v2
 #         env:
 #           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+      - uses: jtalk/k8s-deploy@v2
+        with:
+          namespace: 'tarabut'
+          manifests: |
+              kubernetes/
+          kubectl-version: 'latest'
           
       - name: Wait for pods
         uses: CodingNagger/minikube-wait-action@v1.0.1
